fix: reduce filled label spacing

--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -153,7 +153,7 @@
       visibility: visible
 
     .v-input--variant-filled &
-      transform: translateY(calc(var(--v-input-height) / 56 * -14))
+      transform: translateY(calc(var(--v-input-height) / 56 * -12))
 
     .v-input--variant-single-line &
       left: 0
